--- a/src/_css/style.css
+++ b/src/_css/style.css
@@ -42,15 +42,59 @@ p {
 }
 
 button {
+  position: relative;
   margin: 0;
-  padding: 0.5rem 1.75rem;
+  padding: 0 0 0 3rem;
   border: 0;
-  border-radius: 2rem;
+  border-radius: 0;
   font: inherit;
-  text-transform: uppercase;
+  line-height: 1.5;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+}
+
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 1rem;
+  width: 2.5rem;
+  height: 1.5rem;
   color: var(--background);
   background-color: var(--foreground);
-  cursor: pointer;
+}
+
+button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0.25rem;
+  border-radius: 100%;
+  width: 1rem;
+  height: 1rem;
+  color: var(--foreground);
+  background-color: var(--background);
+  transition: transform 0.2s ease-out;
+}
+
+button[aria-pressed="true"]::after {
+  transform: translateX(1rem);
+}
+
+@media (prefers-color-scheme: dark) {
+  button::before {
+    border: 2px solid var(--foreground);
+    background-color: transparent;
+    box-sizing: border-box;
+  }
+
+  button::after {
+    color: var(--background);
+    background-color: var(--foreground);
+  }
 }
 
 svg {
