--- a/src/_layouts/layout.njk
+++ b/src/_layouts/layout.njk
@@ -4,7 +4,7 @@
 <META name=viewport content="width=device-width,initial-scale=1">
 <META name=robots content=noindex>
 <META name=twitter:card content=summary_large_image>
-<META name=twitter:site content=@dreamseer>
+<META name=twitter:site content=@mrcgrtz>
 <META name=twitter:url property=og:url content=https://arm.marcgoertz.de/>
 <META name=twitter:title property=og:title content="{{ title }}">
 <META name=twitter:description property=og:description content="{{ description }}">
